закончил недоделки с 5 дз и начал форму футер

--- a/index.html
+++ b/index.html
@@ -466,6 +466,11 @@
               </li>
             </ul>
           </div>
+          <form class="footer-input-form"> 
+            <label for="mail">Подпишитесь на рассылку</label>
+            <input type="mail" name="mail" id="mail" placeholder="E-mail">
+            <button type="submit">Подписаться</button>
+          </form>
         </div>
       </div>
     </footer>
