--- a/index.html
+++ b/index.html
@@ -466,11 +466,29 @@
               </li>
             </ul>
           </div>
-          <form class="footer-input-form"> 
-            <label for="mail">Подпишитесь на рассылку</label>
-            <input type="mail" name="mail" id="mail" placeholder="E-mail">
-            <button type="submit">Подписаться</button>
-          </form>
+          <div class="footer-input-field">
+            <form class="footer-input-form">
+              <label for="mail" class="title-mail"
+                >Подпишитесь на рассылку</label
+              >
+              <input
+                class="footer-mail"
+                type="mail"
+                name="mail"
+                id="mail"
+                placeholder="E-mail"
+              />
+              <button class="footer-submit" type="submit">
+                Подписаться
+                <svg class="icon-send">
+                  <use
+                    href="./sprite.svg#icon-send"
+                    class="icon-send-item"
+                  ></use>
+                </svg>
+              </button>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
@@ -480,9 +498,25 @@
     <div class="modal is-hidden" data-modal>
       <div class="modal-inner">
         <button data-modal-close type="button" class="close-modal">
-          <svg width="30" height="30" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="15" cy="15" r="15" fill="#fff"/><circle cx="15" cy="15" r="14.5" stroke="#000" stroke-opacity=".1"/><path d="M21 10.108 19.892 9 15.5 13.392 11.108 9 10 10.108l4.392 4.392L10 18.892 11.108 20l4.392-4.392L19.892 20 21 18.892 16.608 14.5 21 10.108Z" fill="#000"/></svg>
-            
-          </img>
+          <svg
+            width="30"
+            height="30"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <circle cx="15" cy="15" r="15" fill="#fff" />
+            <circle
+              cx="15"
+              cy="15"
+              r="14.5"
+              stroke="#000"
+              stroke-opacity=".1"
+            />
+            <path
+              d="M21 10.108 19.892 9 15.5 13.392 11.108 9 10 10.108l4.392 4.392L10 18.892 11.108 20l4.392-4.392L19.892 20 21 18.892 16.608 14.5 21 10.108Z"
+              fill="#000"
+            />
+          </svg>
         </button>
       </div>
     </div>
